--- a/index.css
+++ b/index.css
@@ -1,12 +1,143 @@
+body, html {
+	margin: 0;
+	padding: 0;
+}
+
+html {
+	white-space: nowrap;
+	font-size: smaller;
+	font-family: arial, sans-serif;
+	height: 100%;
+}
+
+body {
+	min-height: 100%;
+}
+
+header, footer {
+	padding: 0 15px;
+}
+
+footer {
+	background-color: #f2f2f2;
+	padding: 20px 100px 0px 100px;
+}
+
+svg {
+	display: block;
+	height: 2em;
+	fill: #5f6368;
+}
+
+a {
+	text-decoration: none;
+	color: #222;
+}
+
+footer a {
+	color: #70757A;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
 nav ul {
 	list-style: none;
 	padding: 0;
 }
 
-nav, nav ul {
+nav ul li {
+	padding: 3px 12px;
+}
+
+.flex {
 	display: flex;
 }
 
-a {
-	text-decoration: none;
+.column {
+	flex-direction: column;
+}
+
+.wrap {
+	flex-wrap: wrap;
+}
+
+.centered {
+	justify-content: space-around;
+}
+
+.justified {
+	align-items: center;
+}
+
+.spaced {
+	justify-content: space-between;
+}
+
+.button {
+	margin: 3px;
+	border: none;
+	padding: 8px 16px;
+	color: #3c4043;
+	background-color: #f8f9fa;
+	border: 1px solid transparent;
+	border-radius: 4px;
+}
+
+.button:hover {
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+	color: #202124;
+	background-color: #f8f9fa;
+	border: 1px solid #dadce0;
+	text-decoration-line: none;
+}
+
+.blue {
+	font-weight: bold;
+	color: #fff;
+	background-color: #1a73e8;
+	border: 1px solid transparent;
+}
+
+.blue:hover {
+	box-shadow: 0 1px 2px 0 rgba(66,133,244,0.3),0 1px 3px 1px rgba(66,133,244,0.15);
+	color: #fff;
+	background-color: #2b7de9;
+}
+
+.roboto {
+	font-family: Google Sans, Roboto, RobotoDraft, Helvetica;
+}
+
+#searchBar {
+	padding: 13px;
+	margin: 30px -120px;
+	border-radius: 26px;
+	border: 1px solid #dfe1e9;
+}
+
+footer :first-child {
+	flex-basis: 100%;
+	text-align: center;
+}
+
+@media (min-width: 1200px) {
+	.right {
+		order: 2;
+	}
+
+	.left {
+		order: -1;
+	}
+
+	footer :first-child {
+		flex-basis: auto;
+		text-align: center;
+	}
+
+	footer {
+		justify-content: space-between !important;
+		padding: 10px 20px !important;
+	}
 }
